[package]
name = "witty"
description = "An API client made in Rust for interacting with https://wit.ai"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
itertools = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
urlencoding = "2.1.0"
